src/objects/Authorized_Market__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Authorized Markets</relationshipLabel>
        <relationshipName>Authorized_Markets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <label>Authorized Market</label>
    <nameField>
        <label>Authorized Market Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Authorized Markets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>